--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@ footer{
   text-align: center;
   font-family: monospace;
   width: 100%;
-  height: 150px;
+  height: 50px;
   bottom: 0;
-  left: 200px;
+  left: 0px;
+  position: fixed;
 }
