--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ header {
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 100px;
+  height: 50px;
 }
 
 .main{
-  margin: 100 0 100 0;
+  margin: 0 auto;
+  padding: 100px 0px 100px 0px;
   position: relative;
   clear: both;
   display: table;
