--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ table {
 }
 
 footer{
-  background-color: DarkSeaGreen;
+  background-color: lightseagreen;
   text-align: center;
   font-family: monospace;
   width: 100%;
