--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ table {
 }
 
 footer{
-  background-color: darkslategray;
+  background-color: lightgray;
   text-align: center;
   font-family: monospace;
   width: 100%;
