--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ header {
 }
 
 .main{
-  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 230px;
   padding-top: 100px;
-  padding-bottom: 230px;
+  padding-bottom: 100px;
   position: relative;
   clear: both;
   display: table;
