--- a/css/main.css
+++ b/css/main.css
@@ -51,8 +51,8 @@ header#intro > .logo > img {display: block; margin: 0 auto; width: 20%; border-r
 .main > #experiences > .content > .Subheadings > h2:after {display: block; content: ""; width: 5.1em; height: 0.13em; background-color: #ff6363; margin: 0.2em 0 0.1em 0; border-radius: 2px;}
 .main > #experiences > .content > div {padding: 1.1em 0;}
 .main > #experiences > .content > div > h2 {color: #063c5f; padding-bottom: 0.7em;}
-.main > #experiences > .content > div > h2:nth-child(2) {color: #2cc7b5; font-size: 1.3em; padding-left: 0.8em;}
-.main > #experiences > .content > div > h2:nth-of-type(3) {color: #2cc7b5; font-size: 1.3em; padding: 1.3em 0 0.7em 0.8em;}
+.main > #experiences > .content > div > h2:nth-child(2) {color: #c18ced; font-size: 1.3em; padding-left: 0.8em;}
+.main > #experiences > .content > div > h2:nth-of-type(3) {color: #c18ced; font-size: 1.3em; padding: 1.3em 0 0.7em 0.8em;}
 .main > #experiences > .content > div > ul > li {list-style: square inside; padding: 0.2em 0 0.2em 0.8em;}
 .main > #experiences > .content > div > ul > li > a {color: #000000;}
 
